agents_app2: complete feature #2 контентные_страницы_и_новости
